--- a/assets/static/app-assets/css/bootstrap-extended.css
+++ b/assets/static/app-assets/css/bootstrap-extended.css
@@ -1480,7 +1480,7 @@ select.form-control
 
 .header-navbar
 {
-    font-family: 'Comfortaa', cursive, 'Times New Roman', Times, serif;
+    font-family: 'Montserrat-Bold', 'Comfortaa',cursive, 'Times New Roman', Times, serif;
 
     min-height: 5rem;
     padding: 0;
@@ -2636,7 +2636,7 @@ select.form-control
 
 .breadcrumb
 {
-    font-family: 'Comfortaa', cursive, 'Times New Roman', Times, serif;
+    font-family: 'Montserrat-Bold', 'Comfortaa', cursive, 'Times New Roman', Times, serif;
     font-size: 1rem;
 
     padding: 0 0 .75rem 0rem; 
