--- a/priv/templates/custom.gen.html/index.html.eex
+++ b/priv/templates/custom.gen.html/index.html.eex
@@ -1,56 +1,38 @@
-<!-- BEGIN: Content-->
-<div class="app-content content">
-  <div class="content-wrapper">
-    <div class="content-wrapper-before"></div>
-    <div class="content-header row">
-      <div class="content-header-left col-md-4 col-12 mb-2">
-        <h3 class="content-header-title">Listing <%= schema.human_plural %></h3>
-      </div>
-      <div class="content-header-right col-md-8 col-12">
-        <div class="breadcrumbs-top float-md-right">
-          <div class="breadcrumb-wrapper mr-1">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="/">Home</a>
-              </li>
-              <li class="breadcrumb-item"><a href="#"><%= schema.human_plural %></a>
-              </li>
-              <li class="breadcrumb-item active">Listing <%= schema.human_plural %>
-              </li>
-            </ol>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="content-body">
-      <div class="row">
-        <div class="col-12">
-          <div class="card">
-            <div class="card-header">
-              <h4 class="card-title">Listing <%= schema.human_plural %></h4>
-              <a class="heading-elements-toggle"><i class="la la-ellipsis-v font-medium-3"></i></a>
-              <div class="heading-elements">
-                <ul class="list-inline mb-0">
-                  <li><a data-action="collapse"><i class="ft-minus"></i></a></li>
-                  <li><a data-action="reload"><i class="ft-rotate-cw"></i></a></li>
-                  <li><a data-action="expand"><i class="ft-maximize"></i></a></li>
-                  <li><a data-action="close"><i class="ft-x"></i></a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="card-content collapse show">
-              <div class="card-body">
 
-                <div class="table-responsive">
-                  <table class="table">
-                    <thead>
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">Home</li>
+          <li class="breadcrumb-item">
+            <a href="/<%= schema.human_plural %>"><%= schema.human_plural %></a>
+          </li>
+          <li class="breadcrumb-item active">List</li>
+
+        </ol>
+
+        <div class="container-fluid">
+          <div class="animated fadeIn">
+            <div class="row">
+              <div class="col-lg-12">
+
+                <div class="card">
+                  <div class="card-header">
+                     <%= schema.human_singular %> List
+                     <div class="card-header-actions" >
+                        <a href="/<%= schema.human_plural %>/new">
+                        <button class="btn btn-sm btn-primary"><i class="fa fa-plus mr-2"></i> New</button>
+                        </a>
+                      </div>
+                    </div>
+                  <div class="card-body">
+                    <table class="table table-responsive-sm">
+                      <thead>
                       <tr>
                   <%= for {k, _} <- schema.attrs do %>      <th><%= Phoenix.Naming.humanize(Atom.to_string(k)) %></th>
                   <% end %>
+
                         <th></th>
                       </tr>
-                    </thead>
-                    <tbody>
-
+                      </thead>
+                      <tbody>
                   <%%= for <%= schema.singular %> <- @<%= schema.plural %> do %>
                       <tr>
                   <%= for {k, _} <- schema.attrs do %>      <td><%%= <%= schema.singular %>.<%= k %> %></td>
@@ -70,19 +52,19 @@
                       </tr>
                   <%% end %>
 
-                    </tbody>
-                  </table>
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
-        
-              <a href="<%%= Routes.<%= schema.route_helper %>_path(@conn, :new) %>"><button type="button" class="btn btn-bg-gradient-x-red-pink btn-min-width mr-1 mb-1"><i class="ft-plus"></i> New <%= schema.human_singular %></button></a>   
-              </div>
 
+              </div>
             </div>
-          </div>
-        </div>
+
       </div>
-    </div>
-  </div>
-</div>
-<!-- END: Content-->
+        </div>
+
+
+
+
+
 
