--- a/priv/templates/custom.gen.html/show.html.eex
+++ b/priv/templates/custom.gen.html/show.html.eex
@@ -1,47 +1,18 @@
-<!-- BEGIN: Content-->
-<div class="app-content content">
-  <div class="content-wrapper">
-    <div class="content-wrapper-before"></div>
-    <div class="content-header row">
-      <div class="content-header-left col-md-4 col-12 mb-2">
-        <h3 class="content-header-title">Show <%= schema.human_singular %></h3>
-      </div>
-      <div class="content-header-right col-md-8 col-12">
-        <div class="breadcrumbs-top float-md-right">
-          <div class="breadcrumb-wrapper mr-1">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="/">Home</a>
-              </li>
-              <li class="breadcrumb-item"><a href="#"><%= schema.human_plural %></a>
-              </li>
-              <li class="breadcrumb-item active">Show <%= schema.human_singular %>
-              </li>
-            </ol>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="content-body">
-      <div class="row justify-content-md-center">
-        <div class=" col-xl-8 col-lg-8 col-md-10">
-          <div class="card">
-            <div class="card-header">
-              <h4 class="card-title">Show <%= schema.human_singular %></h4>
-              <a class="heading-elements-toggle"><i class="la la-ellipsis-v font-medium-3"></i></a>
-              <div class="heading-elements">
-                <ul class="list-inline mb-0">
-                  <li><a data-action="collapse"><i class="ft-minus"></i></a></li>
-                  <li><a data-action="reload"><i class="ft-rotate-cw"></i></a></li>
-                  <li><a data-action="expand"><i class="ft-maximize"></i></a></li>
-                  <li><a data-action="close"><i class="ft-x"></i></a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="card-content collapse show">
-              <div class="card-body">
-				
-				<!-- Fill this-->
+<ol class="breadcrumb">
+  <li class="breadcrumb-item">Home</li>
+  <li class="breadcrumb-item">
+    <a href="#"><%= schema.human_plural %></a>
+  </li>
+  <li class="breadcrumb-item active">Detail</li>
+</ol>
 
+<div class="container-fluid">
+  <div class="animated fadeIn">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="card">
+          <div class="card-header"><strong>Detail</strong> <%= schema.human_singular %></div>
+<div class="card-body">
 		<ul>
 		<%= for {k, _} <- schema.attrs do %>
 		  <li>
@@ -51,20 +22,19 @@
 		<% end %>
 		</ul>
 
-<span><%%= link "Edit", to: Routes.<%= schema.route_helper %>_path(@conn, :edit, @<%= schema.singular %>), class: "btn" %></span>
-<span><%%= link "Back", to: Routes.<%= schema.route_helper %>_path(@conn, :index), class: "btn btn-bg-gradient-x-red-pink" %></span>
+    </div>
 
-				<!-- END: Fill this-->
+    <div class="card-footer">
+    <span><%%= link "Edit", to: Routes.<%= schema.route_helper %>_path(@conn, :edit, @<%= schema.singular %>), class: "btn btn-primary" %></span>
+<span><%%= link "Back", to: Routes.<%= schema.route_helper %>_path(@conn, :index), class: "btn btn-warning" %></span>
+
+    </div>
 
 
-              </div>
 
-            </div>
-          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-<!-- END: Content-->
 
